<resources>
    <string name="app_name">App test</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Gender">Gender: </string>
    <string name="Age">Age: </string>
    <string name="usernameerror">User cant be empty</string>
    <string name="passworderror">Password cant be empty</string>
    <string name="Nuevaventana">New Window</string>
    <string name="Login">Log in</string>
    <string name="Galeria">Galery</string>
    <string name="Gowow">Go WoW</string>
    <string name="GoList">Go list</string>
    <string name="Register">Register</string>
    <string name="Cancel">Clear</string>
    <string name="Exit">Exit</string>
    <string name="Position">Position  </string>
    <string name="Save">Save</string>
    <string name="LoginToast">Fill your Login </string>
    <string name="dialog_message">Are you sure you want to delete this User? </string>
    <string name="dialog_title">Confirm </string>
    <string name="ok">Yes </string>
    <string name="cancel">No </string>
    <string name="neutral">Cancel </string>
    <string name="GameDetail">Game Detail </string>
    <string name="InfoWoW">"World of Warcraft is a MMORPG developed by Blizzard. Is the fourth game launched in the fantasy universe of Warcraft enviroment, which first game was Warcraft: Orcs and Humans in 1994. WoW recreates inside the world Azeroth, four years laters after the previous release Warcraft III: The Frozen Throne. Blizzard released WoW in the 2th of September of 2001"</string>
    <string name="OfficialWebsite">Official Website </string>

    <string name="user_preferences">com.android.teaching.miprimeraapp.user_preferences</string>
    <string name="user_registry">com.android.teaching.miprimeraapp.user_registry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="colors">
        <item>#ff0000</item>
        <item>#ff4000</item>
        <item>#ff8000</item>
        <item>#ffbf00</item>
        <item>#ffff00</item>
        <item>#bfff00</item>
        <item>#80ff00</item>
        <item>#40ff00</item>
        <item>#00ff00</item>
        <item>#00ff40</item>
        <item>#00ff80</item>
        <item>#00ffbf</item>
        <item>#00ffff</item>
        <item>#00bfff</item>
        <item>#0080ff</item>
        <item>#0040ff</item>
        <item>#0000ff</item>
        <item>#4000ff</item>
        <item>#8000ff</item>
        <item>#bf00ff</item>
        <item>#ff00ff</item>
        <item>#ff00bf</item>
        <item>#ff0080</item>
        <item>#ff0040</item>
        <item>#ff0000</item>
    </string-array>


</resources>
